[BT-158]: Removing exclusion from Build.bazel 71-rest (#17907)
* [BT-158]: Removing exclusion from Build.bazel 71-rest